--- a/index.html
+++ b/index.html
@@ -241,22 +241,113 @@
     </section>
     <!-- supper clint section -->
     <section class="my-24 flex flex-col lg:flex-row gap-12 bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-20 ">
-        <div class="space-y-5">
-            <h2 class="text-5xl font-extrabold text-white">
-                Meet Our Super Clients
-            </h2>
-            <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-            <button class=" text-white btn btn-primary">Show All</button>
-        </div>
-        <!-- review -->
-        <div class="relative p-10 rounded-lg bg-white">
-            <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
-            <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-            <h4 class="font-bold mt-5">Ilham Yuda</h4>
-            <p class="font-medium">Businessman</p>
-        </div>
 
+        <div class=" flex  items-center lg:pr-28 ">
+            <div class="space-y-5">
+                <h2 class="text-5xl font-extrabold text-white">
+                    Meet Our Super Clients
+                </h2>
+                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    slightly
+                    believable. </p>
+                <button class=" text-white btn btn-primary">Show All</button>
+            </div>
 
+        </div>
+        <!-- review container  -->
+        <div class="relative">
+            <!-- next-review -->
+            <div class="relative mb-16 z-10  p-10 opacity-40 rounded-lg bg-white">
+                <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png"
+                    alt="">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                <p class="font-medium">Businessman</p>
+
+                <div class="flex justify-end">
+                    <img class="" src="images/circles.png" alt="">
+                </div>
+            </div>
+            <!-- current review -->
+            <div class="absolute top-40 z-20  lg:-left-24  lg:w-[430px]  p-10 rounded-lg  bg-white">
+                <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png"
+                    alt="">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                <p class="font-medium">Businessman</p>
+
+                <div class="flex justify-end">
+                    <img class="" src="images/circles.png" alt="">
+                </div>
+            </div>
+            <!-- previous review -->
+            <div class="relative p-10 z-10 opacity-40 rounded-lg bg-white">
+                <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="images/client.png"
+                    alt="">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                <p class="font-medium">Businessman</p>
+
+                <div class="flex justify-end">
+                    <img class="" src="images/circles.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="items-center lg:w-[1000px] mx-auto">
+        <div class="text-center">
+            <h2 class="text-5xl font-extrabold mb-5">News & Events</h2>
+            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                look even slightly believable. </p>
+
+        </div>
+        <div class="mx-auto grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <div class="card bg-base-100 w-96 shadow-sm">
+                <figure class="px-10 pt-10">
+                    <img src="images/news-1.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body ">
+                    <p>Feb 05, 2027</p>
+                    <h2 class="card-title">Collecting 8 points for <br> discount</h2>
+                    <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+                    <div class="card-actions">
+                        <button class=" text-black bg-white btn btn-primary">Learn More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card bg-base-100 w-96 shadow-sm">
+                <figure class="px-10 pt-10">
+                    <img src="images/news-2.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body ">
+                    <p>Feb 05, 2027</p>
+                    <h2 class="card-title">Collecting 8 points for <br> discount</h2>
+                    <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+                    <div class="card-actions">
+                        <button class=" text-black bg-white btn btn-primary">Learn More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card bg-base-100 w-96 shadow-sm">
+                <figure class="px-10 pt-10">
+                    <img src="images/news-3.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body ">
+                    <p>Feb 05, 2027</p>
+                    <h2 class="card-title">Collecting 8 points for <br> discount</h2>
+                    <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+                    <div class="card-actions">
+                        <button class=" text-black bg-white btn btn-primary">Learn More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 </main>
