tea house all compite

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <body>
     <header class="container mx-auto my-24">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
 
                 <div>
                     <h1 class="text-7xl font-extrabold">It's good <br>
@@ -35,7 +35,7 @@
                     <button class="btn btn-primary">Explore More</button>
                 </div>
                 <div>
-                    <img src="/images//banner.png" class="max-w-sm" />
+                    <img src="/images//banner.png" class="" />
                     <div class="  -mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <h3 class="text-3xl">5.00</h3>
                         <p>Trust Pilot Ratings</p>
@@ -351,9 +351,65 @@
     </section>
 
 </main>
-<footer>
-
-</footer>
+<footer class="px-6 md:px-16 lg:px-32 xl:px-48 bg-gradient-to-r from-red-100 to-amber-100 py-10 text-base-content">
+    <!-- Top CTA Section -->
+    <div class="flex flex-col md:flex-row items-center justify-between my-12 gap-6 text-center md:text-left">
+      <img src="images/cup.png" alt="" class="w-24 md:w-32" />
+      <div>
+        <span class="block text-lg font-semibold mb-2">Ready to get started?</span>
+        <button class="btn btn-primary">Get Started</button>
+      </div>
+    </div>
+  
+    <!-- Main Footer Content -->
+    <div class="footer flex flex-col md:flex-row flex-wrap gap-10 md:gap-20 justify-between">
+      <!-- Services -->
+      <nav>
+        <header class="footer-title">Services</header>
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav>
+  
+      <!-- Company -->
+      <nav>
+        <header class="footer-title">Company</header>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+  
+      <!-- Legal -->
+      <nav>
+        <header class="footer-title">Legal</header>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+  
+      <!-- Newsletter -->
+      <form>
+        <header class="footer-title">Newsletter</header>
+        <fieldset class="form-control w-full md:w-80">
+          <label class="label">
+            <span class="label-text">Enter your email address</span>
+          </label>
+          <div class="relative">
+            <input type="text" placeholder="username@site.com" class="w-full py-4 bg-transparent border-b-2 border-black outline-none pr-32" />
+            <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  
+    <!-- Copyright -->
+    <aside class="mt-10 text-center">
+      <p>&copy; 2025 - All rights reserved by ACME Industries Ltd</p>
+    </aside>
+  </footer>
+  
 </body>
 
 </html>
